# formath

./: .gitignore  README.md  formath-project-file.md
.github/workflows/: cmake.yml  macOS_cmake.yml  ubuntu_cmake.yml  windows_cmake.yml
docs/: index.html  search.html
docs/interface/: matrix.html  operator(*).html  operator(SLASH).html  vector.html
docs/lists/: files.html  modules.html  procedures.html  programs.html  types.html
docs/module/: matrix_m.html  vector_m.html
docs/proc/: deallocate_vector_data.html  gram_schmidt.html  is_orthonormal.html  nd_test.html  print_basis.html  test_sub.html
docs/program/: gs_test_2.html  m_asgn_test.html  mat_ctor_test.html  mat_qr_test.html  mat_subop_test.html  mat_subop_test~2.html  operator_test.html  v_assignment_test.html  v_constructor_test.html  v_n_assigment_test.html  v_n_constructor_test.html  v_op_speed.html  v_op_speed_sub.html  v_operator_sub_test.html  vec_test.html  vec_test_2.html
docs/sourcefile/: gs_test_2.f90.html  mat_asgn_test.f90.html  mat_ctor_test.f90.html  mat_oper_test.f90.html  mat_qr_test.f90.html  mat_subop_test.f90.html  matrix.f90.html  testmatrixassignment.f90.html  testmatrixconstructors.f90.html  testmatrixoperators.f90.html  testmatrixqrfactorization.f90.html  testmatrixsubroutineoperators.f90.html  testvectorassignment.f90.html  testvectorassignmentspeed.f90.html  testvectorconstructor.f90.html  testvectorconstructorspeed.f90.html  testvectormisc.f90.html  testvectoroperator.f90.html  testvectoroperatorspeed.f90.html  testvectorsubroutineoperator.f90.html  testvectorsubroutineoperatorspeed.f90.html  v_assignment_test.f90.html  v_constructor_test.f90.html  v_fnc_op_speed.f90.html  v_n_assigment_test.f90.html  v_n_constructor_test.f90.html  v_operator_sub_test.f90.html  v_operator_test.f90.html  v_sub_op_speed.f90.html  vec_test_2.f90.html  vector.f90.html
docs/src/: TestMatrixOperators.f90  TestVectorConstructor.f90  TestVectorMisc.f90  mat_asgn_test.f90  mat_ctor_test.f90  mat_oper_test.f90  mat_qr_test.f90  mat_subop_test.f90  matrix.f90  v_fnc_op_speed.f90  v_operator_test.f90  vec_test_2.f90  vector.f90
docs/tipuesearch/: tipuesearch_content.js
docs/type/: matrix.html  nd_vector.html  vector.html
src/: CMakeLists.txt  Config.cmake.in  gram_schmidt_test.f90  matrix.f90  vec_test.f90  vector.f90  vector.i90
src/test/: CMakeLists.txt  gs_test_2.f90  vec_test.f90  vec_test_2.f90
src/test/matrix/: CMakeLists.txt  TestMatrixAssignment.f90  mat_ctor_test.f90  mat_oper_test.f90  mat_qr_test.f90  mat_subop_test.f90
src/test/vector/: CMakeLists.txt  TestVectorAssignmentSpeed.f90  v_assignment_test.f90  v_constructor_test.f90  v_n_constructor_test.f90  v_operator_sub_test.f90  v_operator_test.f90  v_sub_op_speed.f90  vec_test.f90
